// DBML (Database Markup Language) for IbadahHub
// Copy and paste this code into https://dbdiagram.io to generate the ERD

// ─── ENUMS ───────────────────────────────────────────────

enum Role {
  SUPERADMIN
  PENGURUS
  JEMAAH
}

enum SubRole {
  KETUA
  BENDAHARA
  SEKRETARIS
}

enum StatusKegiatan {
  UPCOMING
  ONGOING
  SELESAI
  DIBATALKAN
}

enum StatusDonasi {
  PENDING
  DIKONFIRMASI
  DITOLAK
}

enum MetodePembayaran {
  TRANSFER_BANK
  TUNAI
  QRIS
  MIDTRANS
}

enum StatusPengumuman {
  DRAFT
  AKTIF
  KADALUARSA
}

enum KategoriPengeluaran {
  OPERASIONAL
  KEGIATAN
  SOSIAL
  LAINNYA
}

enum KategoriPemasukan {
  DONASI
  HIBAH
  USAHA
  LAINNYA
}

enum StatusRekening {
  AKTIF
  NONAKTIF
}

enum StatusTempatIbadah {
  AKTIF
  NONAKTIF
}

enum StatusPendaftaran {
  TERDAFTAR
  HADIR
  TIDAK_HADIR
  BATAL
}

enum StatusTagihanKas {
  BELUM_DIBAYAR
  MENUNGGU_KONFIRMASI
  LUNAS
  DIBATALKAN
}

// ─── TABLES ──────────────────────────────────────────────

Table Religion {
  id int [pk, increment]
  nama varchar [unique, not null]
  deskripsi text
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp
}

Table TempatIbadah {
  id int [pk, increment]
  religionId int [not null]
  nama varchar [not null]
  slug varchar [unique, not null]
  alamat text
  kota varchar
  provinsi varchar
  kodePos varchar
  noTelp varchar
  email varchar
  logo varchar
  deskripsi text
  latitude decimal(10,7)
  longitude decimal(10,7)
  status StatusTempatIbadah [default: 'AKTIF', not null]
  createdBy int
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp

  indexes {
    religionId
  }
}

Table User {
  id int [pk, increment]
  nama varchar [not null]
  email varchar [unique]
  password varchar
  role Role [not null]
  subRole SubRole
  religionId int
  tempatIbadahId int
  fotoProfil varchar
  noHp varchar
  alamat text
  loginAttempts int [default: 0, not null]
  lockoutUntil timestamp
  status boolean [default: true, not null]
  emailVerified timestamp
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp
}

Table Session {
  id varchar [pk]
  sessionToken varchar [unique, not null]
  userId int [not null]
  expires timestamp [not null]
}

Table VerificationToken {
  identifier varchar [not null]
  token varchar [unique, not null]
  expires timestamp [not null]

  indexes {
    (identifier, token) [unique]
  }
}


Table Kegiatan {
  id int [pk, increment]
  religionId int [not null]
  tempatIbadahId int [not null]
  namaKegiatan varchar [not null]
  tanggal timestamp [not null]
  waktuMulai varchar [not null]
  waktuSelesai varchar
  lokasi varchar [not null]
  pemimpin varchar
  deskripsi text
  kapasitas int
  status StatusKegiatan [default: 'UPCOMING', not null]
  createdBy int [not null]
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp
  deletedReason text

  indexes {
    tempatIbadahId
  }
}

Table KegiatanPendaftaran {
  id int [pk, increment]
  kegiatanId int [not null]
  userId int [not null]
  status StatusPendaftaran [default: 'TERDAFTAR', not null]
  catatan text
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]

  indexes {
    (kegiatanId, userId) [unique]
  }
}

Table Pengumuman {
  id int [pk, increment]
  religionId int [not null]
  tempatIbadahId int [not null]
  judul varchar [not null]
  isi text [not null]
  tanggalPublish timestamp [default: `now()`, not null]
  expireDate timestamp
  status StatusPengumuman [default: 'DRAFT', not null]
  createdBy int [not null]
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp
  deletedReason text

  indexes {
    tempatIbadahId
  }
}

Table PengumumanLampiran {
  id int [pk, increment]
  pengumumanId int [not null]
  namaFile varchar [not null]
  url varchar [not null]
  ukuran int [not null]
  createdAt timestamp [default: `now()`, not null]
}

Table Donasi {
  id int [pk, increment]
  religionId int [not null]
  tempatIbadahId int [not null]
  userId int
  rekeningId int
  namaDonatur varchar [not null]
  nominal decimal(15,2) [not null]
  tanggal timestamp [not null]
  metodePembayaran MetodePembayaran [not null]
  status StatusDonasi [default: 'PENDING', not null]
  catatan text
  buktiPembayaran varchar
  dikonfirmasiOleh int
  dikonfirmasiAt timestamp
  midtransOrderId varchar [unique]
  midtransToken varchar
  midtransPaymentUrl varchar
  midtransStatus varchar
  midtransTransactionId varchar
  paymentChannel varchar
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp
  deletedReason text

  indexes {
    tempatIbadahId
  }
}

Table Pengeluaran {
  id int [pk, increment]
  religionId int [not null]
  tempatIbadahId int [not null]
  keterangan varchar [not null]
  nominal decimal(15,2) [not null]
  tanggal timestamp [not null]
  kategori KategoriPengeluaran [not null]
  bukti varchar
  rekeningId int
  createdBy int [not null]
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp
  deletedReason text

  indexes {
    tempatIbadahId
  }
}

Table Pemasukan {
  id int [pk, increment]
  religionId int [not null]
  tempatIbadahId int [not null]
  keterangan varchar [not null]
  nominal decimal(15,2) [not null]
  tanggal timestamp [not null]
  kategori KategoriPemasukan [not null]
  bukti varchar
  rekeningId int
  createdBy int [not null]
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp
  deletedReason text

  indexes {
    tempatIbadahId
  }
}

Table Rekening {
  id int [pk, increment]
  religionId int [not null]
  tempatIbadahId int [not null]
  namaBank varchar [not null]
  nomorRekening varchar [not null]
  namaPemilik varchar [not null]
  catatan text
  status StatusRekening [default: 'AKTIF', not null]
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp

  indexes {
    tempatIbadahId
  }
}

Table Notifikasi {
  id int [pk, increment]
  userId int [not null]
  judul varchar [not null]
  isi text [not null]
  urlTujuan varchar
  dibaca boolean [default: false, not null]
  createdAt timestamp [default: `now()`, not null]
}

Table ActivityLog {
  id int [pk, increment]
  userId int [not null]
  aksi varchar [not null]
  model varchar [not null]
  recordId int
  detail text
  ipAddress varchar
  userAgent varchar
  createdAt timestamp [default: `now()`, not null]
}

Table TagihanKas {
  id int [pk, increment]
  religionId int [not null]
  tempatIbadahId int [not null]
  userId int [not null]
  nama varchar [not null]
  deskripsi text
  nominal decimal(15,2) [not null]
  jatuhTempo timestamp
  status StatusTagihanKas [default: 'BELUM_DIBAYAR', not null]
  buktiPembayaran varchar
  metodePembayaran MetodePembayaran
  pemasukanId int
  tanggalBayar timestamp
  dikonfirmasiOleh int
  createdBy int [not null]
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp

  indexes {
    tempatIbadahId
  }
}

Table JadwalIbadah {
  id int [pk, increment]
  religionId int [not null]
  tempatIbadahId int [not null]
  namaIbadah varchar [not null]
  tanggal timestamp [not null]
  waktuMulai varchar [not null]
  waktuSelesai varchar
  pemimpin varchar
  pendamping varchar
  lokasi varchar
  catatan text
  createdBy int [not null]
  createdAt timestamp [default: `now()`, not null]
  updatedAt timestamp [not null]
  deletedAt timestamp

  indexes {
    tempatIbadahId
    tanggal
  }
}

// ─── RELATIONSHIPS ───────────────────────────────────────

Ref: TempatIbadah.religionId > Religion.id
Ref: User.religionId > Religion.id
Ref: User.tempatIbadahId > TempatIbadah.id
Ref: Session.userId > User.id [delete: cascade]

Ref: Kegiatan.religionId > Religion.id
Ref: Kegiatan.tempatIbadahId > TempatIbadah.id
Ref: KegiatanPendaftaran.kegiatanId > Kegiatan.id [delete: cascade]
Ref: KegiatanPendaftaran.userId > User.id
Ref: Pengumuman.religionId > Religion.id
Ref: Pengumuman.tempatIbadahId > TempatIbadah.id
Ref: PengumumanLampiran.pengumumanId > Pengumuman.id [delete: cascade]
Ref: Donasi.religionId > Religion.id
Ref: Donasi.tempatIbadahId > TempatIbadah.id
Ref: Donasi.userId > User.id
Ref: Donasi.rekeningId > Rekening.id
Ref: Donasi.dikonfirmasiOleh > User.id
Ref: Pengeluaran.religionId > Religion.id
Ref: Pengeluaran.tempatIbadahId > TempatIbadah.id
Ref: Pengeluaran.createdBy > User.id
Ref: Pengeluaran.rekeningId > Rekening.id
Ref: Pemasukan.religionId > Religion.id
Ref: Pemasukan.tempatIbadahId > TempatIbadah.id
Ref: Pemasukan.createdBy > User.id
Ref: Pemasukan.rekeningId > Rekening.id
Ref: Rekening.religionId > Religion.id
Ref: Rekening.tempatIbadahId > TempatIbadah.id
Ref: Notifikasi.userId > User.id [delete: cascade]
Ref: ActivityLog.userId > User.id
Ref: TagihanKas.religionId > Religion.id
Ref: TagihanKas.tempatIbadahId > TempatIbadah.id
Ref: TagihanKas.createdBy > User.id
Ref: TagihanKas.userId > User.id [delete: cascade]
Ref: TagihanKas.pemasukanId > Pemasukan.id
Ref: TagihanKas.dikonfirmasiOleh > User.id
Ref: JadwalIbadah.religionId > Religion.id
Ref: JadwalIbadah.tempatIbadahId > TempatIbadah.id
Ref: JadwalIbadah.createdBy > User.id

// ─── TABLE GROUPS ────────────────────────────────────────

TableGroup Keuangan {
  Donasi
  Pemasukan
  Pengeluaran
  Rekening
  TagihanKas
}

TableGroup Auth_dan_Profil {
  User
  Session
  VerificationToken
  ActivityLog
  Notifikasi
}

TableGroup Utama {
  Religion
  TempatIbadah
}

TableGroup Kegiatan_dan_Informasi {
  Kegiatan
  KegiatanPendaftaran
  Pengumuman
  PengumumanLampiran
  JadwalIbadah
}
